# spideynews

./: README.md  pyproject.toml
spideynews/: scrapy.cfg
spideynews/spideynews/: items.py  middlewares.py  pipelines.py  settings.py
spideynews/spideynews/spiders/: rss_chosun.py  rss_donga.py  rss_hani.py  rss_joongang.py  rss_jtbc.py  rss_khan.py
